# ai-negotiation-agent

./: .gitignore  README.md
Project/Backend/: api_server.py  negotiatorAi.py  pyproject.toml
Project/Frontend/Negotiator AI Chatbot Application/: App.tsx  index.html  vite.config.ts
Project/Frontend/src/services/: api.ts  package.json
